adjust the columns

--- a/rent.html
+++ b/rent.html
@@ -18,7 +18,7 @@
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
@@ -32,7 +32,7 @@
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
@@ -45,7 +45,7 @@
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
@@ -58,7 +58,7 @@
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
@@ -71,7 +71,7 @@
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
@@ -84,7 +84,7 @@
           <div class="container">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
 
           </div>
