--- a/pay.html
+++ b/pay.html
@@ -34,7 +34,7 @@
           <li>About</li>
         </a>
         <a href="#How it Works">
-          <li>How it Works</li>
+          <li>How It Works</li>
         </a>
         <a href="#Profile">
           <li>News</li>
@@ -127,6 +127,7 @@
       </div>
 
       <div class="col-md-3">
+
         <img src="images/nikeRun.jpg">
         <h4>Nike Red Runner&reg</h4>
         <p>Limited Edition. Ohh yeah got it from my uncle, I love this boot you gotta have it, and Oh yeah its costly</p>
