--- a/index.html
+++ b/index.html
@@ -52,10 +52,26 @@
             <div class="item active">
                 <img src="images/shoe1.jpeg" alt="Rent Shoe">
                 <div class="carousel-caption">
-                  <h3>Men's Shoe</h3>
+                  <h3>Shoe</h3>
                   <p>Rent a Shoe is always so much fun!!</p>
                 </div>
               </div>
+
+              <div class="item">
+                  <img src="images/airforce.jpg" alt="Rent Shoe">
+                  <div class="carousel-caption">
+                    <h3>Shoe</h3>
+                    <p>Rent a Shoe is always so much fun!!</p>
+                  </div>
+                </div>
+
+                <div class="item">
+                    <img src="images/airjordans.jpeg" alt="Rent Shoe">
+                    <div class="carousel-caption">
+                      <h3>Shoe</h3>
+                      <p>Rent a Shoe is always so much fun!!</p>
+                    </div>
+                  </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
@@ -170,6 +186,7 @@
 <div class="foo3">
     <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
   </div>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
