add a plus glyphicon in a column, make background color purple

--- a/rent.html
+++ b/rent.html
@@ -13,82 +13,79 @@
     <h1>MY RENTING STUFF</h1>
     <div class="row" id="portgal">
       <div class="column">
-        <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
-          <div class="container">
+        
+          <img src="images/nikered.jpg" alt="Mike" style="width:90%">
+          <div class="container content">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
           <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
-          </div>
+        
         </div>
       </div>
 
       <div class="column">
-        <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
-          <div class="container">
+
+          <img src="images/airforce.jpg" alt="Mike" style="width:90%">
+          <div class="container content">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
             <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
-          </div>
+
         </div>
       </div>
       <div class="column">
-        <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
-          <div class="container">
+
+          <img src="images/airjordans.jpeg" alt="Mike" style="width:90%">
+          <div class="container content">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
             <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
-          </div>
+
         </div>
       </div>
       <div class="column">
-        <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
-          <div class="container">
+
+          <img src="images/mowabb.jpg" alt="Mike" style="width:90%">
+          <div class="container content">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
             <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
-          </div>
+
         </div>
       </div>
       <div class="column">
-        <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:90%;">
-          <div class="container">
+
+          <img src="images/nikeblue.jpg" alt="Mike" style="width:90%;">
+          <div class="container content">
             <h2>Mike Ross</h2>
             <p class="title">Art Director</p>
             <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
             <p>example@example.com</p>
             <p><button type="submit" class="btn" id="edit">Edit</button></p>
 
-          </div>
+
         </div>
       </div>
-      <div class="column">
-        <div class="card">
-          <img src="images/homepage.jpg" alt="Mike" style="width:90%">
-          <div class="container">
-            <h2>Mike Ross</h2>
-            <p class="title">Art Director</p>
-            <div class="crop-text"> <p>Some text that describes me lorem ipsum ipsum lorem.</p> </div>
-            <p>example@example.com</p>
+      <div class="column" id="add">
 
+          <div class="container content">
+
+          <div class="add"><button id="add"><span id="add"class="glyphicon glyphicon-plus"></span></button></div>
+</div>
           </div>
-        </div>
+
       </div>
 
     </div>
