--- a/rent.html
+++ b/rent.html
@@ -107,9 +107,19 @@
   </section>
 
   <!-- form -->
-  <section id="adding-form">
-    <div class="container" id="product-form">
-      <form id="renting-form">
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4> Add Item</h4>
+        </div>
+        <div class="modal-body">
+
+          <form id="renting-form" role="form">
 
             <div class="form-group">
               <label for="product-name">Product Name<abbr title="required">*</abbr>:</label>
@@ -118,7 +128,7 @@
 
             <div class="form-group">
               <label for="product-description">Description :</label>
-              <input type="text" class="form-group" required id="product-description">
+              <input type="text" class="form-group" id="product-description">
             </div>
 
             <div class="form-group">
@@ -128,7 +138,7 @@
 
             <div class="form-group">
               <label for="product-color">Color :</label>
-              <input type="text" class="form-group" required id="product-color">
+              <input type="text" class="form-group" id="product-color">
             </div>
 
             <div class="form-group">
@@ -138,20 +148,29 @@
 
             <div class="form-group">
               <label for="product-location">Location</label>
-              <input type="text" class="form-group" required id="product-location">
+              <input type="text" class="form-group" id="product-location">
             </div>
             <div class="form-group">
-<label for="fileuplaod">Select a photo to upload</label>
+              <label for="fileuplaod">Select a photo to upload</label>
               <input type="file" name="fileupload" value="fileupload" id="fileupload" accept="image/*" onchange="showMyImage(this)" />
 
               <br/>
               <img id="thumbnil" src="" alt="image" />
-</div>
-              <button id="renting" class="btn" type="submit">Rent Out</button>
-      </form>
+            </div>
+            <button id="renting" class="btn btn-block" type="submit" data-dismiss="modal">Rent Out <span class="glyphicon glyphicon-ok"></span></button>
+          </form>
+        </div>
+
+        <!-- modal footer -->
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
+         <span class="glyphicon glyphicon-remove"></span> Cancel
+       </button>
+        </div>
       </div>
-  </section>
-  <aside></aside>
+    </div>
+  </div>
+
   <script src="js/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="js/rent.js"></script>
