--- a/rent.html
+++ b/rent.html
@@ -39,9 +39,38 @@
               <p>Some text that describes me lorem ipsum ipsum lorem.</p>
             </div>
             <p>example@example.com</p>
-            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+            <p><button type="submit" class="btn" id="edit" data-toggle="modal" data-target="#myStatus-borrowed">Status</button></p>
           </div>
         </div>
+
+        <div class="modal fade" id="myStatus-borrowed" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4> Status</h4>
+              </div>
+              <div class="modal-body">
+                <h2>BORROWED!</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- available status -->
+        <div class="modal fade" id="myStatus-available" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4> Status</h4>
+              </div>
+              <div class="modal-body">
+                <h2>AVAILABLE!</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
         <div class="column">
           <img src="images/airforce.jpg" alt="Mike" style="width:90%">
@@ -52,7 +81,7 @@
               <p>Some text that describes me lorem ipsum ipsum lorem.</p>
             </div>
             <p>example@example.com</p>
-            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+            <p><button type="submit" class="btn" id="edit"data-toggle="modal" data-target="#myStatus-available">Status</button></p>
           </div>
         </div>
 
@@ -65,7 +94,7 @@
               <p>Some text that describes me lorem ipsum ipsum lorem.</p>
             </div>
             <p>example@example.com</p>
-            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+            <p><button type="submit" class="btn" id="edit" data-toggle="modal" data-target="#myStatus-borrowed">Status</button></p>
           </div>
         </div>
 
@@ -78,7 +107,7 @@
               <p>Some text that describes me lorem ipsum ipsum lorem.</p>
             </div>
             <p>example@example.com</p>
-            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+            <p><button type="submit" class="btn" id="edit" data-toggle="modal" data-target="#myStatus-borrowed">Status</button></p>
           </div>
         </div>
 
@@ -91,9 +120,10 @@
               <p>Some text that describes me lorem ipsum ipsum lorem.</p>
             </div>
             <p>example@example.com</p>
-            <p><button type="submit" class="btn" id="edit">Edit</button></p>
+            <p><button type="submit" class="btn" id="edit" data-toggle="modal" data-target="#myStatus-available">Status</button></p>
           </div>
         </div>
+        <
 
         <div class="column" id="add">
           <div class="container content">
@@ -170,7 +200,9 @@
       </div>
     </div>
   </div>
-
+  <div class="foo3">
+      <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
+    </div>
   <script src="js/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="js/rent.js"></script>
