adjusting margin top

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 <footer class="container-fluid">
   <div class="row">
     <div class="col-md-3 text-left" id="social">
-      <h4>KEEP IN TOUCH</h4>
-      <hr>
+      <h4 id="kj">KEEP IN TOUCH</h4>
+      <hr id="jk">
     <ul type="none" class="icon">
       <li><a href="https://facebook.com">Facebook</a></li>
       <li><a href="https://twitter.com">Twitter</a></li>
@@ -154,8 +154,8 @@
     </div>
 
     <div class="col-md-3 text-center">
-      <h4>ABOUT US</h4>
-      <hr>
+      <h4 id="kj1">ABOUT US</h4>
+      <hr id="jk1">
       <a href="#">About us</a> <br>
       <a href="#">Blog</a> <br>
       <a href="#">Privacy Policy</a> <br>
@@ -163,17 +163,17 @@
   </div>
 
   <div class="col-md-3 text-center">
-    <h4>RENT A SHOE</h4>
-    <hr>
+    <h4 id="kj2">RENT A SHOE</h4>
+    <hr id="jk2">
     <a href="index.html">Home</a> <br>
     <a href="#">Rent</a> <br>
     <a href="#">Borrow</a> <br>
     <a href="https://outlook.live.com/mail">Sign Up</a>
 </div>
 
-  <div class="col-md-3 text-right">
-    <h4>ADDRESS</h4>
-    <hr>
+  <div class="col-md-3 text-center">
+    <h4 id="kj3">ADDRESS</h4>
+    <hr id="jk3">
     Lumumba Ave, Kampala <br>
     Soliz House, 4th Floor <br>
     Hours: <br>
