--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <ul class="active nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
         <li class="active"><a href="rent.html">Rent a Shoe</a></li>
-        <li class="active"><a href="borrow.html">Borrow a Shoe</a></li>
+        <li class="active"><a href="pay.html">Borrow a Shoe</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#"><span class="glyphicon glyphicon-user"></span> User Account</a></li>
+        <li class="active"><a href="user.html"><span class="glyphicon glyphicon-user"></span> User Account</a></li>
         <li class="active"><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
       </ul>
     </div>
