styling login form

--- a/user.html
+++ b/user.html
@@ -22,7 +22,7 @@
 				<h2 class=""> LOGIN FORM: </h2>
 				<form>
 					<div class="form-group">
-						<label for="logEmail">Email</label>
+						<label for="logEmail">User Name</label>
 						<input type="text" placeholder="joseph@outlook.com" class="form-control">
 					</div>
 					<div class="form-group">
